sql/sql_view.cc
@@ -1170,6 +1170,9 @@ bool mysql_make_view(THD *thd, TABLE_SHARE *share, TABLE_LIST *table,
     */
     mysql_derived_reinit(thd, NULL, table);
 
+    thd->select_number+= table->view->number_of_selects;
+
+    DEBUG_SYNC(thd, "after_cached_view_opened");
     DBUG_RETURN(0);
   }
 
@@ -1356,6 +1359,9 @@ bool mysql_make_view(THD *thd, TABLE_SHARE *share, TABLE_LIST *table,
     /* Parse the query. */
 
     parse_status= parse_sql(thd, & parser_state, table->view_creation_ctx);
+
+    lex->number_of_selects=
+      (thd->select_number - view_select->select_number) + 1;
 
     /* Restore environment. */
 
